// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultsTotalCountComponent should be rendered correctly when total items count equals 1 1`] = `
<app-search-results-total-count
  totalCount={[Function Number]}
>
  <h5>
    
    
    
    1 photo
    
     found
  </h5>
  
</app-search-results-total-count>
`;

exports[`SearchResultsTotalCountComponent should be rendered correctly when total items count equals zero 1`] = `
<app-search-results-total-count
  totalCount="0"
>
  <h5>
    
    
    No photos
    
    
     found
  </h5>
  
</app-search-results-total-count>
`;

exports[`SearchResultsTotalCountComponent should be rendered correctly when total items count is greater than 1 1`] = `
<app-search-results-total-count
  totalCount={[Function Number]}
>
  <h5>
    
    
    
    
    10 photos
     found
  </h5>
  
</app-search-results-total-count>
`;
